--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -84,6 +84,12 @@ android {
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0"
+
+        externalNativeBuild {
+    cmake {
+        arguments "-DCMAKE_MAKE_PROGRAM=C:\\\\Android\\\\Sdk\\\\cmake\\\\3.22.1\\\\bin\\\\ninja.exe", "-DCMAKE_OBJECT_PATH_MAX=1024"
+    }
+}
     }
     signingConfigs {
         debug {
