--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^23.0.1",
+    "@react-native-firebase/auth": "^23.0.1",
+    "@react-native-firebase/firestore": "^23.0.1",
+    "@react-native/new-app-screen": "0.81.0",
     "react": "19.1.0",
     "react-native": "0.81.0",
-    "@react-native/new-app-screen": "0.81.0",
     "react-native-safe-area-context": "^5.5.2"
   },
   "devDependencies": {
