--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "@react-native-firebase/auth": "^23.0.1",
     "@react-native-firebase/firestore": "^23.0.1",
     "@react-native/new-app-screen": "0.81.0",
+    "@react-navigation/native": "^7.1.17",
+    "@react-navigation/native-stack": "^7.3.25",
     "react": "19.1.0",
     "react-native": "0.81.0",
-    "react-native-safe-area-context": "^5.5.2"
+    "react-native-safe-area-context": "^5.6.0",
+    "react-native-screens": "^4.14.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
