--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react": "19.1.0",
     "react-native": "0.81.0",
     "react-native-safe-area-context": "^5.6.0",
-    "react-native-screens": "^4.14.1"
+    "react-native-screens": "^4.14.1",
+    "react-native-webrtc": "^124.0.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -39,6 +40,7 @@
     "jest": "^29.6.3",
     "prettier": "2.8.8",
     "react-test-renderer": "19.1.0",
+    "resolve-from": "^5.0.0",
     "typescript": "^5.8.3"
   },
   "engines": {
